Fix #8, the site is now scrollable when on smaller screens

--- a/client/src/components/screens/Subjects/Subjects.css
+++ b/client/src/components/screens/Subjects/Subjects.css
@@ -15,6 +15,17 @@ body {
 	justify-content: center;
 }
 
+@media (max-width: 35rem) {
+	body {
+		overflow-y: auto;
+	}
+}
+
+@media (max-width: 20rem) {
+	.Master {
+		margin-bottom: 4rem;
+	}
+}
 
 .Title {
 	text-align: center;
